# backend/src/Gones.Infrastructure/Identity/ApplicationUser.cs
@@ -1,0 +1,8 @@
+using Microsoft.AspNetCore.Identity;
+
+namespace Gones.Infrastructure.Identity;
+
+public sealed class ApplicationUser : IdentityUser<Guid>
+{
+    public string GlobalRole { get; private set; } = "User";
+}
